feat: 实现高级RAG系统 - 第四阶段完成
🧠 核心功能:
- 图文混合向量化器 (MultimodalVectorizer)
- 知识图谱构建器 (KnowledgeGraphBuilder)
- 内容融合引擎 (ContentFusionEngine)
- 多模态推理引擎 (MultimodalReasoningEngine)
- 图查询处理器 (GraphQueryProcessor)
- 高级RAG管理器 (AdvancedRAGManager)

✨ 技术特性:
- Sentence-Transformers多语言向量化
- spaCy实体识别和关系抽取
- NetworkX图结构处理和推理
- 多种融合策略和冲突解决
- 路径推理、子图匹配、随机游走
- 自然语言查询理解和优化

🔧 系统集成:
- 完整的REST API接口
- 前端界面支持
- 与基础RAG系统无缝集成
- 与多模态系统协同工作
- 性能监控和统计

📚 文档完善:
- 详细的使用指南
- 完整的测试脚本
- API接口文档
- 配置说明和故障排除

🎯 应用场景:
- 学术研究和文献分析
- 企业知识管理
- 教育培训和智能答疑
- 复杂问答和推理任务

--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,60 @@ transformers==4.35.0
 librosa==0.10.1
 numpy==1.24.3
 soundfile==0.12.1
+
+# LangChain RAG 相关依赖
+langchain==0.3.12
+langchain-community==0.3.12
+langchain-core==0.3.28
+langchain-text-splitters==0.3.2
+langchain-chroma==0.1.4
+langchain-ollama==0.2.1
+chromadb==0.5.23
+sentence-transformers==3.3.1
+
+# 文档处理相关依赖
+pypdf==5.1.0
+python-docx==1.1.2
+python-multipart==0.0.12
+unstructured==0.16.9
+markdown==3.7
+
+# 情感系统相关依赖
+# 注意：这些依赖是可选的，如果不需要高级情感分析可以不安装
+# transformers==4.35.0  # 用于高级情感分析（可选）
+# torch==2.1.0  # transformers的依赖（可选）
+
+# 多模态AI相关依赖
+Pillow==10.4.0
+opencv-python==4.10.0.84
+requests==2.32.3
+
+# 多模态AI模型相关（可选，用于高级功能）
+# transformers==4.35.0  # 用于BLIP等视觉语言模型
+# torch==2.1.0  # transformers依赖
+# torchvision==0.16.0  # 图像处理
+# clip-by-openai==1.0  # CLIP模型（如果使用）
+
+# 语音情感合成相关依赖
+pydub==0.25.1
+numpy==1.24.3
+
+# 高级音频处理（可选）
+# scipy==1.11.4  # 信号处理
+# librosa==0.10.1  # 音频分析
+# soundfile==0.12.1  # 音频文件处理
+
+# 高级RAG系统相关依赖
+networkx==3.2.1
+sentence-transformers==2.2.2
+scikit-learn==1.3.2
+spacy==3.7.2
+
+# 图谱可视化（可选）
+# matplotlib==3.8.2  # 基础图表
+# plotly==5.17.0  # 交互式可视化
+# pyvis==0.3.2  # 网络图可视化
+
+# 高级NLP处理（可选）
+# transformers==4.35.0  # 已在多模态部分定义
+# torch==2.1.0  # 已在多模态部分定义
