--- a/requirements.txt
+++ b/requirements.txt
@@ -54,9 +54,34 @@ opencv-python==4.10.0.84
 networkx>=3.2.1
 spacy>=3.7.2
 
+# spaCy语言模型（需要单独安装）
+# 安装命令: python -m spacy download zh_core_web_sm
+# 安装命令: python -m spacy download en_core_web_sm
+
 # 可选依赖（高级功能）
 # torchvision>=0.16.0  # 图像处理
 # scipy>=1.11.4  # 信号处理
 # matplotlib>=3.8.2  # 基础图表
 # plotly>=5.17.0  # 交互式可视化
 # pyvis>=0.3.2  # 网络图可视化
+
+# ========================================
+# 系统依赖说明（需要手动安装）
+# ========================================
+#
+# 1. FFmpeg（音频处理必需）：
+#    Windows: 下载 https://ffmpeg.org/download.html 并添加到PATH
+#    Ubuntu/Debian: sudo apt-get install ffmpeg
+#    CentOS/RHEL: sudo yum install ffmpeg
+#    macOS: brew install ffmpeg
+#
+# 2. spaCy语言模型（中文NLP功能）：
+#    python -m spacy download zh_core_web_sm
+#    python -m spacy download en_core_web_sm
+#
+# 3. Ollama（AI模型服务）：
+#    下载安装: https://ollama.ai
+#    安装模型: ollama pull qwen2:0.5b
+#
+# 4. Git LFS（大文件支持，可选）：
+#    下载安装: https://git-lfs.github.io/
